#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([eoj], [0.1], [vabc3h@gmail.com])
AC_CONFIG_SRCDIR([main/eoj.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE



AM_GNU_GETTEXT([external],[need-ngettext])
AM_GNU_GETTEXT_VERSION([0.18])
ALL_LINGUAS="zh_CN"

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile
				 po/Makefile.in
				 main/Makefile
				 ])
AC_OUTPUT
